--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ publishing {
 
     repositories {
         maven {
-            url = "file://${project.projectDir.toString()}/mvn-artifact"
+            url = "file://${project.projectDir.toString()}/mvn-artifact/repository/"
         }
     }
 }
