--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework:spring-webflux:5.3.22'
-    implementation 'org.springframework.data:spring-data-jpa:2.7.2'
+    implementation 'io.projectreactor:reactor-core:3.4.22'
+    implementation 'org.springframework.data:spring-data-commons:2.7.2'
 
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
